# fabitosh.github.io

./: .aiexclude  .eleventy.js  .gitignore  README.md  about.md  eleventy.config.js  index.html  index.md  mycss.css  notes.md  package-lock.json  package.json  photography.md  projects.md  robots.txt  sitemap.njk
.github/workflows/: build_eleventy.yml
.prompts/: blog_review.md
_data/: site.json
_includes/: landing-page.njk  layout.njk  note.njk  photography.njk
_site/: index.html
_site/about/: index.html
_site/notes/: index.html
_site/notes/coffee/: index.html
_site/photography/: index.html
_site/projects/: index.html
assets/css/: style.css
assets/js/: theme.js
css/: style.css
notes/: battling-mold.md  coffee-grinders.md  coffee.md  configuration-synchronization.md  creating-websites.md  digital-dopamine.md  digital-minimalism-choosing-a-focused-life-in-a-noisy-world.md  digital-minimalism.md  digital_dopamine.md  diy-endurance-fuel.md  egoless-engineering.md  harari-nexus.md  keyboard.md  knife-sharpening.md  knife_sharpening.md  personalized-news-feed.md  whats-in-my-bidon.md  zero-to-one.md  zh-parkieren.md  zh_parkieren.md
obsi-sync/: mirror.py
obsidian_sync/: README.md  mirror.py  pyproject.toml  test_image_links.py
pages/: notes.md  photography.md
projects/: configuration-synchronization.md
