[tool.poetry]
name = "obsi-sync-11ty"
version = "0.1.0"
description = "Helper scripts to track tagged obsidian notes inwebsite repo."
authors = ["Fabio Meier <fabitosh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
